Kubernetes/account-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accountservice
  template:
    metadata:
      labels:
        app: accountservice
    spec:
      containers:
        - name: accountservice
          image: mindhawk/advanced-software-individual-project:accountservice
---
apiVersion: v1
kind: Service
metadata:
  name: account-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: accountservice
  ports:
    - name: accountservice
      protocol: TCP
      port: 80
      targetPort: 80
